# azure-iot-edge-extension

./: README.md
modules/: CMakeLists.txt  README.md
modules/filter/: README.md
samples/: CMakeLists.txt
samples/httprestapi_sample/: CMakeLists.txt
samples/mixed_lang_proc_sample/: README.md
